# QuoteDesktop

./: .gitignore  .gitmodules  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  NewQuoteDialog.cpp  NewQuoteDialog.hpp  Quote.cpp  Quote.hpp  QuoteApp.cpp  QuoteApp.hpp  QuoteList.cpp  QuoteList.hpp  README.md  example-data.json  example-data2.json  main.cpp  wrongdata.json
